Lab_2_Project_and_Report/Lab_2_Project/lab 2/BLE Lab 2/Design01.cydsn/CortexM0/ARM_GCC_484/Debug/Design01-ARM_GCC_484-Debug-BUILD.log
--------------- Build Started: 09/26/2016 15:19:36 Project: Design01, Configuration: ARM GCC 4.8.4 Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Kervins\AppData\Local\Cypress Semiconductor\PSoC Creator\3.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\Kervins\Desktop\lab 2\BLE Lab 2\Design01.cydsn\Design01.cyprj" -d CYBL10563-56LQXI -s "C:\Users\Kervins\Desktop\lab 2\BLE Lab 2\Design01.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -I.\Generated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_484\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\main.c -o .\CortexM0\ARM_GCC_484\Debug\main.o
.\main.c: In function 'main':
.\main.c:61:5: warning: implicit declaration of function 'PWM_Start' [-Wimplicit-function-declaration]
     PWM_Start();
     ^
.\main.c:64:5: warning: implicit declaration of function 'CyBle_IasRegisterAttrCallback' [-Wimplicit-function-declaration]
     CyBle_IasRegisterAttrCallback(IasEventHandler);
     ^
.\main.c: In function 'IasEventHandler':
.\main.c:136:9: warning: implicit declaration of function 'CyBle_IassGetCharacteristicValue' [-Wimplicit-function-declaration]
         CyBle_IassGetCharacteristicValue(CYBLE_IAS_ALERT_LEVEL, sizeof(alertLevel), &alertLevel);
         ^
.\main.c:136:42: error: 'CYBLE_IAS_ALERT_LEVEL' undeclared (first use in this function)
         CyBle_IassGetCharacteristicValue(CYBLE_IAS_ALERT_LEVEL, sizeof(alertLevel), &alertLevel);
                                          ^
.\main.c:136:42: note: each undeclared identifier is reported only once for each function it appears in
.\main.c: In function 'HandleAlertLEDs':
.\main.c:163:13: warning: implicit declaration of function 'PWM_WriteCompare' [-Wimplicit-function-declaration]
             PWM_WriteCompare(NO_ALERT_COMPARE);
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 09/26/2016 15:20:36 ---------------
